fixed card clipping on scale hover

--- a/src/styles/Column.css
+++ b/src/styles/Column.css
@@ -1,6 +1,7 @@
 .column{
     max-width:60rem;
     margin-right: 0;
+    overflow-x: visible;
 }
 .column-left{
     
